--- a/ODK.Web.Razor/Views/Shared/Account/_AccountCreateForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_AccountCreateForm.cshtml
@@ -80,7 +80,7 @@
 
                     <button type="button" class="btn btn-primary w-100" data-submit="parent">
                         <span>Sign up</span>
-                        @await Html.PartialAsync("Components/Icons/_Rocket")
+                        @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.Rocket))
                     </button>
                 </div>
         }
