--- a/ODK.Web.Razor/Views/Shared/Components/_Wizard.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_Wizard.cshtml
@@ -53,7 +53,7 @@
                         formNoValidate
                         data-wizard-validate>
                         <span>Next</span>
-                        @await Html.PartialAsync("Components/Icons/_ChevronRight")
+                        @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.ChevronRight))
                     </button>
                 </div>
             }
