--- a/ODK.Web.Razor/Views/Shared/Events/_EventResponseIcon.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_EventResponseIcon.cshtml
@@ -1,8 +1,11 @@
-﻿@using ODK.Web.Razor.Models.Events
+﻿@using ODK.Web.Razor.Models.Components
+@using ODK.Web.Razor.Models.Events
 @model EventResponseIconViewModel
 
 @if (Model.CurrentResponse > 0)
-{
+{    
+    var icon = Model.Icon;
+
     if (!Model.ReadOnly)
     {
         @*@Html.AntiForgeryToken()*@
@@ -13,8 +16,14 @@
             class="btn-icon                    
                    event-response-option event-response-option--@Model.CurrentResponse.ToString()?.ToLowerInvariant() 
                    @((Model.Active || Model.ReadOnly) ? "active" : null)">
-        <i class="fas icon--event-response @Model.IconClass @(Model.ReadOnly ? "icon--event-response--sm" : null)"
-           data-bs-toggle="tooltip" data-bs-title="@Model.Tooltip">
-        </i>
+        @if (icon != null)
+        {
+            <span data-bs-toggle="tooltip" data-bs-title="@Model.Tooltip">
+                @await Html.PartialAsync("Components/_Icon", new IconViewModel(icon.Value)
+                {
+                    Class = $"icon--event-response {(Model.ReadOnly ? "icon--event-response--sm" : null)}"
+                })
+            </span>
+        }
     </button>
 }
