--- a/ODK.Web.Razor/wwwroot/css/main.css
+++ b/ODK.Web.Razor/wwwroot/css/main.css
@@ -12340,6 +12340,10 @@ html[data-platform=odk] {
     align-items: center;
   }
 }
+.icon-wrapper {
+  line-height: 1;
+}
+
 .icon--help {
   color: #6d6dcb;
 }
