--- a/ODK.Web.Razor/Views/Shared/Account/_ChapterAccountContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_ChapterAccountContent.cshtml
@@ -23,7 +23,7 @@
 
             <form class="d-flex align-items-center" method="post" action="@OdkRoutes.Account.PictureRotate(Model.Chapter)">
                 <button class="btn-icon" data-bs-toggle="tooltip" data-bs-title="Rotate right">
-                    @await Html.PartialAsync("Components/Icons/_Undo")
+                    @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.Undo))
                 </button>
             </form>
         </div>
