--- a/ODK.Web.Razor/Views/Shared/Account/_UpdatePictureContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_UpdatePictureContent.cshtml
@@ -21,7 +21,7 @@
 
             <form class="d-flex align-items-center" method="post" action="/account/picture/rotate">
                 <button class="btn-icon" data-bs-toggle="tooltip" data-bs-title="Rotate">
-                    @await Html.PartialAsync("Components/Icons/_Undo")
+                    @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.Undo))
                 </button>
             </form>
         </div>
