--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionsContent.cshtml
@@ -67,7 +67,9 @@
                                 <td>
                                     @if (subscription.Recurring)
                                     {
-                                        <i class="fa-solid fa-arrows-spin" data-bs-toggle="tooltip" title="Recurring susbcription"></i>
+                                        <span data-bs-toggle="tooltip" title="Recurring susbcription">
+                                            @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.ArrowsSpin))
+                                        </span>
                                     }
                                 </td>    
                                 <td>
@@ -89,7 +91,7 @@
                                         <form method="post" action="/groups/@Model.Chapter.Id/members/subscriptions/@subscription.Id/delete">
                                             <button data-bs-toggle="tooltip" data-bs-title="Delete" class="btn-icon text-danger"
                                                     onclick="return confirm('Are you sure you want to delete this subscription?');">
-                                                @await Html.PartialAsync("Components/Icons/_Times")
+                                                @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.Times))
                                             </button>
                                         </form>
                                     }                                    
