--- a/ODK.Web.Razor/Views/Shared/Groups/Home/_GroupInfo.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Groups/Home/_GroupInfo.cshtml
@@ -1,6 +1,7 @@
 ﻿@using ODK.Core.Utils
 @using ODK.Services.Chapters.ViewModels
 @using ODK.Web.Common.Routes
+@using ODK.Web.Razor.Models.Components
 @model GroupHomePageViewModel
 
 <div class="d-flex flex-column gap-3">
@@ -24,7 +25,7 @@
                 Going since @Model.Chapter.CreatedUtc.ToFriendlyDateString(Model.TimeZone)
             </div>
             <div class="d-flex justify-content-end text-end align-items-center gap-2">
-                @await Html.PartialAsync("Components/Icons/_Members")
+                @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.Members))
                 @Model.MemberCount @StringUtils.Pluralise(Model.MemberCount, "member")
             </div>
         </div>
