--- a/ODK.Web.Razor/Views/Shared/Groups/_GroupCreateForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Groups/_GroupCreateForm.cshtml
@@ -54,7 +54,9 @@
                         @Html.LabelFor(x => x.Location.Name, new { @class = "form-label" })
                         <div class="input-group">
                             <span class="input-group-text">
-                                <i class="fa-solid fa-location-dot" data-bs-toggle="tooltip" data-bs-title="Location"></i>
+                                <span data-bs-toggle="tooltip" data-bs-title="Location">
+                                    @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.LocationPin))
+                                </span>
                             </span>
                             @Html.TextBoxFor(x => x.Location.Name, new { @class = "form-control", data_location = "" })
                         </div>
@@ -98,7 +100,7 @@
                     </p>
                     <button type="button" class="btn btn-primary w-100" data-submit="parent">
                         <span>Create group</span>
-                        @await Html.PartialAsync("Components/Icons/_Rocket")
+                        @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.Rocket))
                     </button>
                 </div>
         }
