--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailProviders.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailProviders.cshtml
@@ -1,5 +1,6 @@
 ﻿@using ODK.Services.Settings
 @using ODK.Web.Common.Extensions
+@using ODK.Web.Razor.Models.Components
 @inject ISettingsService SettingsService
 @{
     var memberId = User.MemberId();
@@ -31,7 +32,7 @@
                         <form method="post" action="/superadmin/emails/providers/@provider.Id/delete">
                             <button data-bs-toggle="tooltip" data-bs-title="Delete" class="btn-icon text-danger"
                                     onclick="return confirm('Are you sure you want to delete this email provider?');">
-                                @await Html.PartialAsync("Components/Icons/_Times")
+                                @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.Times))
                             </button>
                         </form>
                     </td>
